Godbolt link simplified.

--- a/fast-math/fast-math.tex
+++ b/fast-math/fast-math.tex
@@ -195,9 +195,7 @@ else
         \item Different results but not more wrong than without \verb'fast-math'.
     \end{itemize}
 
-    \url{https://godbolt.org/z/841zx64bM}
-
-    \url{https://godbolt.org/z/6jjqWrc51}
+    \url{https://godbolt.org/z/jqz8P8vjj}
 \end{frame}
 
 \subsection{Exception handling}
