Fast-math added in the report.

--- a/fast-math/fast-math.tex
+++ b/fast-math/fast-math.tex
@@ -16,6 +16,12 @@
 \graphicspath{ {../images/} }
 \usetheme{Copenhagen}
 \setbeamertemplate{page number in head/foot}[totalframenumber]
+\lstset{
+    basicstyle=\ttfamily,
+    breaklines=true,
+    showstringspaces=false,
+    keywordstyle=\color{blue},
+}
 
 
 \title{Numerical stability and fast-math}
