Corrections for the report.

--- a/fast-math/fast-math.tex
+++ b/fast-math/fast-math.tex
@@ -79,7 +79,10 @@
     \frametitle{Non-nominal case}
 
     \begin{displaymath}
-        (0.8)_{10} \approx (1.1001100110011001101 \times 2^{-1})_{2}
+        \begin{split}
+            (0.8)_{10} & \approx (1.1001100110011001101 \times 2^{-1})_{2} \\
+            & \approx (0.80000019073486328125)_{10}
+        \end{split}
     \end{displaymath}
 
     The representation is an approximation, because the number of bits is limited.
