--- a/rapport/refs.bib
+++ b/rapport/refs.bib
@@ -22,6 +22,12 @@
   url    = {https://gcc.gnu.org/onlinedocs/}
 }
 
+@manual{git,
+  author = {Git community},
+  title  = {git},
+  url    = {https://git-scm.com/doc}
+}
+
 @article{Clemencic_2012,
   doi       = {10.1088/1742-6596/396/5/052021},
   url       = {https://dx.doi.org/10.1088/1742-6596/396/5/052021},
@@ -81,4 +87,24 @@
   booktitle = {CGO 2016 Proceedings of the 2016 International Symposium on Code Generation and Optimization},
   pages     = {12-23},
   address   = {New York, NY, USA}
+}
+
+@article{8766229,
+  author  = {},
+  journal = {IEEE Std 754-2019 (Revision of IEEE 754-2008)},
+  title   = {IEEE Standard for Floating-Point Arithmetic},
+  year    = {2019},
+  volume  = {},
+  number  = {},
+  pages   = {1-84},
+  doi     = {10.1109/IEEESTD.2019.8766229}
+}
+
+@techreport{edms784588,
+  author      = {Markus Frank},
+  title       = {Online Raw Data Format},
+  institution = {CERN},
+  year        = {2022},
+  month       = {10},
+  url         = {https://edms.cern.ch/ui/#!master/navigator/document?D:101144907:101144907:subDocs}
 }
