Other corrections for the report.

--- a/rapport/refs.bib
+++ b/rapport/refs.bib
@@ -22,6 +22,12 @@
   url    = {https://gcc.gnu.org/onlinedocs/}
 }
 
+@manual{clang,
+  author = {The Clang Team},
+  title  = {Clang documentation},
+  url    = {https://clang.llvm.org/docs/}
+}
+
 @manual{git,
   author = {Git community},
   title  = {git},
@@ -107,4 +113,13 @@
   year        = {2022},
   month       = {10},
   url         = {https://edms.cern.ch/ui/#!master/navigator/document?D:101144907:101144907:subDocs}
+}
+
+@techreport{19770005172,
+  author      = {Thornton, Catherine L},
+  title       = {Triangular Covariance Factorizations for Kalman Filtering},
+  institution = {NASA},
+  year        = {1976},
+  month       = {10},
+  url         = {https://ntrs.nasa.gov/citations/19770005172}
 }
