--- a/presentation/presentation.tex
+++ b/presentation/presentation.tex
@@ -76,7 +76,7 @@
 \subsection{Types de bibliothèques}
 
 \begin{frame}[fragile]
-    \frametitle{Library types}
+    \frametitle{Types de bibliothèques}
 
     \begin{itemize}
         \item STATIC: archive de ficheirs objets qui sont fusionés à l'exécutable au mment du link.
@@ -161,7 +161,7 @@ build/run ./build/Gaudi/Gaudi/Gaudi_static options.json
         \item Spéculation sur les appels virtuels
         \item Séparation du code mort
     \end{itemize}
-    Ces optimisations peuvent multiplier plusieurs fois la rapidité d'exécution.
+    Ces optimisations peuvent multiplier la rapidité d'exécution.
     Mais certains heuristiques peuvent être faux.
 \end{frame}
 
@@ -302,7 +302,7 @@ else
 \end{frame}
 
 \begin{frame}[fragile]
-    \frametitle{Principle}
+    \frametitle{Principe}
 
     \begin{itemize}
         \item Ensemble d'options.
